--- a/index.html
+++ b/index.html
@@ -23,14 +23,14 @@
 	#sidebar, #kitchen-sink{
     transform: translateX(0px) translateY(0px) rotateY(0deg) !important;
     position:fixed !important;
-    top:0px; right:0px;
+    top:0px; right:0px; bottom:0px;
     }
     
     #kitchen-sink{
     right:74px;
     }
     
-    #notification{
+    .notification{
     transform: translateX(0px) translateY(0px) rotateY(0deg) !important;
     position:fixed !important;
     bottom:0; left:0;
@@ -53,7 +53,7 @@
 	<!-- copy these lines to your document: -->
 
 	<div id="index_hype_container" class="HYPE_document" style="margin:auto;position:relative;width:100%;height:3000px;overflow:hidden;">
-		<script type="text/javascript" charset="utf-8" src="index.hyperesources/index_hype_generated_script.js?12058"></script>
+		<script type="text/javascript" charset="utf-8" src="index.hyperesources/index_hype_generated_script.js?20565"></script>
 	</div>
 
 	<!-- end copy -->
@@ -72,10 +72,12 @@
 		<div>TRACKS</div>
 		<div>LEADERBOARD</div>
 		<div>Cancel</div>
-		<div>Button</div>
 		<div>Join Now</div>
 		<div>KALTURA EVENT HUB
 </div>
+		<div></div>
+		<div></div>
+		<div></div>
 
 	</div>
 
