--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
 	<!-- copy these lines to your document: -->
 
 	<div id="index_hype_container" class="HYPE_document" style="margin:auto;position:relative;width:100%;height:3000px;overflow:hidden;">
-		<script type="text/javascript" charset="utf-8" src="index.hyperesources/index_hype_generated_script.js?97345"></script>
+		<script type="text/javascript" charset="utf-8" src="index.hyperesources/index_hype_generated_script.js?28008"></script>
 	</div>
 
 	<!-- end copy -->
@@ -64,8 +64,9 @@
 
 	<div style="display:none" aria-hidden=true>
 
-		<div> </div>
 		<div></div>
+		<div>Button</div>
+		<div> </div>
 		<div>LOUNGE</div>
 		<div>AGENDA</div>
 		<div>SPEAKERS</div>
