--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
 
 	<meta name="viewport" content="user-scalable=yes, width=1280" />
 	<link href='https://fonts.googleapis.com/css?family=Lato:700&subset=latin' rel='stylesheet' type='text/css'>
+	<link href='https://fonts.googleapis.com/css?family=Lato&subset=latin' rel='stylesheet' type='text/css'>
 	
 	<style>
 	#sidebar, #kitchen-sink{
@@ -40,9 +41,10 @@
         transform: translateX(0px) translateY(0px) rotateY(0deg) !important;
     position:fixed !important;
     }
- #paris{
- display:none;
- }
+
+	#wrapper-test{
+	max-width:1200px; margin:auto; transform: translateX(0px) translateY(0px) rotateY(0deg) !important; position:static !important; margin-top:32px;
+	}
     
 	</style>
 	
@@ -53,7 +55,7 @@
 	<!-- copy these lines to your document: -->
 
 	<div id="index_hype_container" class="HYPE_document" style="margin:auto;position:relative;width:100%;height:3000px;overflow:hidden;">
-		<script type="text/javascript" charset="utf-8" src="index.hyperesources/index_hype_generated_script.js?75384"></script>
+		<script type="text/javascript" charset="utf-8" src="index.hyperesources/index_hype_generated_script.js?37337"></script>
 	</div>
 
 	<!-- end copy -->
@@ -73,12 +75,37 @@
 		<div>TRACKS</div>
 		<div>LEADERBOARD</div>
 		<div>Cancel</div>
+		<div>Browse Stage Agenda</div>
 		<div>Join Now</div>
 		<div>KALTURA EVENT HUB
 </div>
 		<div></div>
 		<div></div>
 		<div></div>
+		<div>05:00</div>
+		<div>Starting in</div>
+		<div>04:59</div>
+		<div>04:58</div>
+		<div>04:57</div>
+		<div>04:56</div>
+		<div>04:55</div>
+		<div>04:54</div>
+		<div>04:53</div>
+		<div>04:52</div>
+		<div>04:51</div>
+		<div>04:50</div>
+		<div>04:49</div>
+		<div>04:48</div>
+		<div>04:47</div>
+		<div>04:46</div>
+		<div>04:45</div>
+		<div>04:44</div>
+		<div>04:43</div>
+		<div>04:42</div>
+		<div>04:41</div>
+		<div>04:40</div>
+		<div>04:39</div>
+		<div>04:38</div>
 
 	</div>
 
