--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
     position:fixed !important;
     }
 
-	#wrapper-test{
+	.wrapper-centered{
 	max-width:1200px; margin:auto; transform: translateX(0px) translateY(0px) rotateY(0deg) !important; position:static !important; margin-top:32px;
 	}
     
@@ -56,7 +56,7 @@
 	<!-- copy these lines to your document: -->
 
 	<div id="index_hype_container" class="HYPE_document" style="margin:auto;position:relative;width:100%;height:3000px;overflow:hidden;">
-		<script type="text/javascript" charset="utf-8" src="index.hyperesources/index_hype_generated_script.js?92070"></script>
+		<script type="text/javascript" charset="utf-8" src="index.hyperesources/index_hype_generated_script.js?27960"></script>
 	</div>
 
 	<!-- end copy -->
