--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
     .reactions-menu{
     transform: translateX(0px) translateY(0px) rotateY(0deg) !important;
     position:fixed !important;
-    bottom:16px; right:448px;
+    bottom:16px; right:480px;
     }
     
 	</style>
@@ -62,7 +62,7 @@
 	<!-- copy these lines to your document: -->
 
 	<div id="index_hype_container" class="HYPE_document" style="margin:auto;position:relative;width:100%;height:3000px;overflow:hidden;">
-		<script type="text/javascript" charset="utf-8" src="index.hyperesources/index_hype_generated_script.js?43336"></script>
+		<script type="text/javascript" charset="utf-8" src="index.hyperesources/index_hype_generated_script.js?75199"></script>
 	</div>
 
 	<!-- end copy -->
@@ -113,6 +113,7 @@
 		<div>04:40</div>
 		<div>04:39</div>
 		<div>04:38</div>
+		<div></div>
 		<div></div>
 		<div></div>
 		<div></div>
